# wishlist

./: .gitignore  pyproject.toml
app/: __init__.py  __main__.py  conftest.py
app/config/: __init__.py  tests.py
app/fixtures/: gabe_store_response.html  steampay_response.html
app/handlers/: main.py  tests.py
app/parsers/: gaben_store.py  steambuy.py  steampay.py  tests.py
