[tool.poetry]
name = "wishlist"
version = "0.1.0"
description = ""
authors = ["ivan <ivan4dante@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyrogram = "^2.0.106"
beautifulsoup4 = "^4.12.2"
selenium = "^4.12.0"
webdriver-manager = "^4.0.0"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
