[tool.poetry]
name = "wishlist"
version = "0.1.0"
description = ""
authors = ["ivan <ivan4dante@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyrogram = "^2.0.106"
beautifulsoup4 = "^4.12.2"
selenium = "^4.12.0"
webdriver-manager = "^4.0.0"
lxml = "^4.9.3"
pytest-asyncio = "^0.21.1"
pytest = "^7.4.2"
pytest-env = "^1.0.1"
modconfig = "^1.2.1"
uvloop = "^0.17.0"

[tool.pytest.ini_options]
addopts = "-xslv"
python_files = "test*.py"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning"
]
env = [
    "ENV=tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
